--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Varför välja Ownit?</title>
   </head>
   <body>
-    <div id="app"></div>
-    <!--<script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>-->
+    <div id="why-ownit"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
